--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -157,100 +157,11 @@ h4 {
 .btn-ordi.active {
   background-color: var(--secondary);
 }
-
-/* ----------------------------cssmodif------------------------------ 
-body {
-  height: 100%;
-  background: url(../img/fond2.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-img {
-  height: 100%;
-  width: 100%;
-}
-.picture {
-  margin-top: 20px;
+.vsplay {
   height: 60px;
   width: 60px;
-  margin-left: 20px;
 }
-.pictureJ {
-  margin-top: 20px;
+.vsordi {
   height: 60px;
   width: 60px;
-  margin-left: 20px;
 }
-.btn-joueur {
-  cursor: pointer;
-}
-
-.joueur {
-  margin-top: 80px;
-  background-color: rgb(66, 53, 53);
-  height: 400px;
-  width: 200px;
-  border-radius: 25px;
-}
-
-p {
-  padding-top: 40px;
-  margin-left: 20px;
-  font-family: 'Lobster', cursive;
-  font-size: 20px;
-  text-align: center;
-  color: rgb(247, 246, 214);
-}
-
-h1 {
-  font-family: 'Lobster', cursive;
-  text-align: center;
-  font-size: 200px;
-  color: #493b30;
-}
-@media screen and (max-width: 600px) {
-  .h1 {
-    font-size: 50px;
-  }
-}
-.ordi {
-  margin-top: 80px;
-  background-color: rgb(66, 53, 53);
-  height: 400px;
-  width: 200px;
-  border-radius: 25px;
-}
-
-.imageVs {
-  height: 150px;
-  width: 150px;
-  object-fit: cover;
-  border-radius: 90px;
-  margin-top: 20px;
-  margin-left: 20px;
-}
-
-.picplay {
-  color: rgb(36, 22, 7);
-}
-
-h4 {
-  font-family: 'Lobster', cursive;
-  text-align: center;
-  font-size: 35px;
-  color: #f5ce74;
-  margin-top: 10px;
-}
-
-hr {
-  color: #f5ce74;
-  font-size: 50px;
-}
-
-.msg {
-  font-family: 'Lobster', cursive;
-  text-align: center;
-  font-size: 35px;
-  color: #f5ce74;
-  margin-top: 10px;
-} */
