--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,11 +14,11 @@
 }
 
 body {
-  background: url(../img/fond2.jpg);
+  background: url(../img/fondshi1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  /* background-color: var(--back); */
-  /* font-family: sans-serif; */
+  background-color: var(--back);
+  font-family: sans-serif;
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -27,19 +27,19 @@ body {
 h1 {
   font-family: 'Lobster', cursive;
   text-align: center;
-  font-size: 200px;
-  color: #493b30;
+  font-size: 40px;
+  color: #240c05;
 }
 h4 {
   font-family: 'Lobster', cursive;
   text-align: center;
-  font-size: 35px;
-  color: #3b2901;
+  font-size: 20px;
+  color: #240c05;
   margin-top: 10px;
 }
 .img {
-  height: 60px;
-  width: 60px;
+  height: 50px;
+  width: 50px;
 }
 /* .style {
   font-family: 'Lobster', cursive;
@@ -58,7 +58,6 @@ h4 {
   padding: var(--btn-padding);
   border-radius: 40px;
 }
-
 #reset {
   font-size: 12px;
   grid-column: span 2;
@@ -73,6 +72,7 @@ h4 {
   margin-bottom: 40px;
   text-align: center;
 }
+
 .new {
   font-family: 'Lobster', cursive;
   text-align: center;
@@ -80,14 +80,13 @@ h4 {
 }
 
 #message {
-  /* font-size: 25px; */
+  font-size: 25px;
   font-family: 'Lobster', cursive;
   text-align: center;
   font-size: 35px;
   color: #f5ce74;
   margin-top: 10px;
 }
-
 #next {
   margin-top: 20px;
   padding: 10px 30px;
@@ -97,49 +96,40 @@ h4 {
   visibility: hidden;
   cursor: pointer;
 }
-
 #next.active {
   visibility: visible;
 }
-
 .jeu {
   border-top: 1px solid black;
-  padding-top: 40px;
+  padding-top: 30px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 200px;
+  gap: 40px;
 }
-
 .button {
   display: flex;
   align-items: center;
-  font-size: 45px;
+  font-size: 45 px;
   padding: var(--btn-padding);
 }
-
 .btn-joueur,
 .btn-ordi {
   border-radius: 15px;
   transition: all 0.2s ease;
 }
-
 .btn-joueur {
   cursor: pointer;
   background-color: #8b9095;
 }
-
 .btn-joueur:hover {
   color: var(--primary);
 }
-
 .button p {
   margin-left: 20px;
 }
-
 .button:not(:last-child) {
   margin-bottom: 40px;
 }
-
 .btn-joueur.desactivated {
   background-color: var(--back);
   cursor: default;
@@ -160,8 +150,40 @@ h4 {
 .vsplay {
   height: 60px;
   width: 60px;
+  border-radius: 50px;
+  margin-left: 20px;
 }
+.vsplay {
+  animation: vsplay 4s cubic-bezier(0.1, 0.573, 0.565, 8) infinite both;
+}
+
+@keyframes vsplay {
+  0% {
+    transform: translateX(-50px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
 .vsordi {
   height: 60px;
   width: 60px;
+  border-radius: 50px;
+}
+
+.vsordi {
+  animation: vsordi 4s cubic-bezier(0.9, 0.573, 0.565, 8) infinite both;
+}
+@keyframes vsordi {
+  0% {
+    transform: translateX(0px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(-50px);
+    opacity: 1;
+  }
 }
