--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,14 +4,13 @@
   --back: #f1f1f1;
   --action: #4f2012;
   --border-radius: 15px;
-  --btn-padding: 20px;
+  --btn-padding: 10px;
 }
-
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+}  */
 
 body {
   background: url(../img/fondshi1.jpg);
@@ -19,27 +18,28 @@ body {
   background-size: cover;
   background-color: var(--back);
   font-family: sans-serif;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
   align-items: center;
 }
 h1 {
   font-family: 'Lobster', cursive;
   text-align: center;
-  font-size: 40px;
-  color: #240c05;
+  font-size: 30px;
+  color: #b85103;
 }
 h4 {
   font-family: 'Lobster', cursive;
   text-align: center;
-  font-size: 20px;
-  color: #240c05;
+  font-size: 30px;
+  color: #b85103;
   margin-top: 10px;
 }
 .img {
   height: 50px;
   width: 50px;
+}
+p {
+  font-family: 'Lobster', cursive;
+  color: #b85103;
 }
 /* .style {
   font-family: 'Lobster', cursive;
@@ -47,20 +47,26 @@ h4 {
 } */
 
 .score {
-  margin-top: 20px;
-  margin-bottom: 40px;
-  display: grid;
-  grid-template-columns: repeat(2, 200px);
-  gap: 20px;
+  /* margin-top: 10px; */
+  /* margin-bottom: 10px; */
   text-align: center;
-  font-size: 35px;
+  font-size: 30px;
+  font-weight: bold;
   background-color: #8b9095;
-  padding: var(--btn-padding);
+  /* padding: var(--btn-padding); */
   border-radius: 40px;
+  display: flex;
+}
+.newR {
+  text-align: center;
+  font-family: 'Lobster', cursive;
+  text-align: center;
+  font-size: 30px;
+  color: #b85103;
 }
 #reset {
   font-size: 12px;
-  grid-column: span 2;
+
   cursor: pointer;
 }
 
@@ -69,14 +75,14 @@ h4 {
 }
 
 .action {
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   text-align: center;
 }
 
 .new {
   font-family: 'Lobster', cursive;
   text-align: center;
-  color: #886410;
+  color: #b85103;
 }
 
 #message {
@@ -102,34 +108,39 @@ h4 {
 .jeu {
   border-top: 1px solid black;
   padding-top: 30px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 40px;
 }
 .button {
   display: flex;
   align-items: center;
-  font-size: 45 px;
+  font-size: 20 px;
   padding: var(--btn-padding);
+}
+@media screen and (min-width: 576px) {
+  .button p {
+    font-size: 35px;
+  }
 }
 .btn-joueur,
 .btn-ordi {
   border-radius: 15px;
-  transition: all 0.2s ease;
+  /* transition: all 0.2s ease; */
 }
 .btn-joueur {
   cursor: pointer;
   background-color: #8b9095;
+  transition: all 0.2s ease;
 }
 .btn-joueur:hover {
   color: var(--primary);
 }
-.button p {
-  margin-left: 20px;
+.button {
+  /* margin-left: 20px; */
+  font-size: 10px;
 }
 .button:not(:last-child) {
   margin-bottom: 40px;
 }
+
 .btn-joueur.desactivated {
   background-color: var(--back);
   cursor: default;
@@ -148,13 +159,13 @@ h4 {
   background-color: var(--secondary);
 }
 .vsplay {
-  height: 60px;
-  width: 60px;
+  height: 100px;
+  width: 100px;
   border-radius: 50px;
-  margin-left: 20px;
+  align-items: center;
 }
 .vsplay {
-  animation: vsplay 4s cubic-bezier(0.1, 0.573, 0.565, 8) infinite both;
+  animation: vsplay 4s cubic-bezier(0.1, 0.5, 0.5, 53) infinite both;
 }
 
 @keyframes vsplay {
@@ -168,14 +179,14 @@ h4 {
   }
 }
 
-.vsordi {
+/* .vsordi {
   height: 60px;
   width: 60px;
   border-radius: 50px;
 }
 
 .vsordi {
-  animation: vsordi 4s cubic-bezier(0.9, 0.573, 0.565, 8) infinite both;
+  animation: vsordi 4s cubic-bezier(0.1, 0.573, 0.565, 10) infinite both;
 }
 @keyframes vsordi {
   0% {
@@ -186,4 +197,4 @@ h4 {
     transform: translateX(-50px);
     opacity: 1;
   }
-}
+} */
